# amdgpu-tooling

./: CMakeLists.txt  DyninstUtility.cpp  DyninstUtility.h  KdUtils.cpp  KdUtils.h  KernelDescriptor.cpp  KernelDescriptor.h  expand-args.cpp  extract-fatbin.cpp  extract-gpubin.cpp  instr-driver  kd-tool.cpp  kernel-info.cpp  preload-backup.cpp  preload.cpp  rep-tool.cpp  update-exec.cpp  update-fatbin.cpp  update-kd.cpp  update-note-phdr.cpp
